# MarioCPP2026

./: .gitignore  CMakeLists.txt  build_log.txt  main.cpp
.github/: copilot-instructions.md
assets/levels/: demo.json  level1.json  level2.json
docs/: ARCHITECTURE.md  class_diagram.md
include/Zia/editor/: EditorScene.hpp  EditorUI.hpp  ISceneEditor.hpp
include/Zia/engine/: Application.hpp  EngineConfig.hpp  IAssetManager.hpp  IEntityManager.hpp  IInput.hpp  IRenderer.hpp  IScene.hpp  Scene.hpp  UIManager.hpp
include/Zia/engine/adapters/: AssetManagerAdapter.hpp  EntityManagerAdapter.hpp  InputAdapter.hpp  RendererAdapter.hpp  SceneAdapter.hpp
include/Zia/engine/audio/: AudioManager.hpp
include/Zia/engine/ecs/: EntityManager.hpp  EntityTypeComponent.hpp
include/Zia/engine/input/: Binding.hpp  InputManager.hpp
include/Zia/engine/render/: Renderer.hpp  Sprite.hpp
include/Zia/engine/resources/: AssetManager.hpp
include/Zia/engine/spatial/: QuadTile.h  Quadtree.hpp
include/Zia/engine/ui/: UIManager.hpp
include/Zia/game/: MarioGame.hpp  MenuScene.hpp  PauseScene.hpp  PlayScene.hpp
include/Zia/game/gameplay/: PowerUp.hpp
include/Zia/game/helpers/: Constants.hpp  QuadTile.h  Spawner.hpp  quadtree.h  tileSweep.hpp
include/Zia/game/systems/: AnimationSystem.hpp  BackgroundSystem.hpp  CameraSystem.hpp  CloudSystem.hpp  CollisionSystem.hpp  DebugDrawSystem.hpp  EnemySystem.hpp  InspectorSystem.hpp  LevelSystem.hpp  PhysicsSystem.hpp  PlayerControllerSystem.hpp  SpriteRenderSystem.hpp
include/Zia/game/ui/: HUD.hpp  MainMenuBar.hpp
include/Zia/game/world/: Camera.hpp  EntitySpawn.hpp  JsonHelper.hpp  Level.hpp  TileMap.hpp
include/mario/audio/: AudioManager.hpp
include/mario/core/: Game.hpp  GameState.hpp  MenuScene.hpp  MenuState.hpp  PauseScene.hpp  PauseState.hpp  PlayScene.hpp  PlayState.hpp  Scene.hpp  UIManager.hpp
include/mario/ecs/: Components.hpp  EntityManager.hpp  EntityType.hpp  EntityTypeComponent.hpp  Registry.hpp
include/mario/ecs/components/: AnimationComponent.hpp  BackgroundComponent.hpp  CloudComponent.hpp  CollisionInfo.hpp  CollisionInfoComponent.hpp  EnemyComponent.hpp  JumpState.hpp  JumpStateComponent.hpp  PlayerControllerComponent.hpp  PlayerInput.hpp  PlayerInputComponent.hpp  PlayerStats.hpp  PlayerStatsComponent.hpp  Position.hpp  PositionComponent.hpp  Size.hpp  Sprite.hpp  SpriteComponent.hpp  Type.hpp  TypeComponent.hpp  Velocity.hpp
include/mario/engine/: Application.hpp  Engine.hpp  EngineState.hpp  EntityManagerFacade.hpp  IAssetManager.hpp  IEntityManager.hpp  IInput.hpp  IRenderer.hpp  IScene.hpp  SystemScheduler.hpp  UIManager.hpp
include/mario/engine/adapters/: AssetManagerAdapter.hpp  EntityManagerAdapter.hpp  InputAdapter.hpp  RendererAdapter.hpp  SceneAdapter.hpp
include/mario/engine/input/: InputManager.hpp
include/mario/engine/render/: Renderer.hpp
include/mario/entities/: Enemy.hpp  Entity.hpp  Player.hpp  PlayerConstants.hpp
include/mario/game/: Game.hpp  GameStates.hpp  Gameplay.hpp  MarioGame.hpp  MenuScene.hpp  PauseScene.hpp  PlayScene.hpp  PlayState.hpp
include/mario/game/gameplay/: PowerUp.hpp
include/mario/game/helpers/: Spawner.hpp  quadtree.h  tileSweep.hpp
include/mario/game/systems/: CloudSystem.hpp  (+10 more)
include/mario/gameplay/: PowerUp.hpp
include/mario/helpers/: Constants.hpp  Spawner.hpp  Timer.hpp
include/mario/input/: InputManager.hpp
include/mario/render/: Renderer.hpp  Sprite.hpp
include/mario/resources/: AssetManager.hpp
include/mario/systems/: AnimationSystem.hpp  BackgroundSystem.hpp  CameraSystem.hpp  CloudSystem.hpp  CollisionSystem.hpp  DebugDrawSystem.hpp  EnemySystem.hpp  GameplaySystems.hpp  InspectorSystem.hpp  LevelSystem.hpp  PhysicsSystem.hpp  PhysicsSystems.hpp  PlayerControllerSystem.hpp  PlayerInputSystem.hpp  PlayerMovementSystem.hpp  RenderSystems.hpp  SpriteRenderSystem.hpp
include/mario/ui/: HUD.hpp
include/mario/util/: Constants.hpp  QuadTile.h  Quadtree.h  Spawner.hpp  TileSweep.hpp
include/mario/world/: Camera.hpp  Level.hpp  TileMap.hpp  World.hpp
src/audio/: audio_manager.cpp
src/core/: game.cpp  game_state.cpp  menu_scene.cpp  menu_state.cpp  pause_scene.cpp  pause_state.cpp  play_scene.cpp  play_state.cpp  ui_manager.cpp
src/editor/: EditorScene.cpp  EditorUI.cpp
src/engine/: Application.cpp  EngineConfig.cpp  engine.cpp  system_scheduler.cpp  ui_manager.cpp
src/engine/audio/: audio_manager.cpp
src/engine/input/: input_manager.cpp
src/engine/render/: renderer.cpp  sprite.cpp
src/engine/resources/: asset_manager.cpp
src/engine/spatial/: Quadtree.cpp
src/engine/ui/: ui_manager.cpp
src/entities/: enemy.cpp  entity.cpp  player.cpp
src/game/: MarioGame.cpp  game.cpp  menu_scene.cpp  menu_state.cpp  pause_scene.cpp  pause_state.cpp  play_scene.cpp  play_state.cpp  power_up.cpp
src/game/gameplay/: power_up.cpp
src/game/helpers/: quadtree.cpp  spawner.cpp  tileSweep.cpp
src/game/systems/: animation_system.cpp  background_system.cpp  camera_system.cpp  cloud_system.cpp  collision_system.cpp  debug_draw_system.cpp  enemy_system.cpp  inspector_system.cpp  level_system.cpp  physics_system.cpp  player_controller_system.cpp  sprite_render_system.cpp
src/game/ui/: MainMenuBar.cpp  hud.cpp
src/game/world/: JsonHelper.cpp  camera.cpp  level.cpp  tile_map.cpp
src/gameplay/: power_up.cpp
src/helpers/: quadtree.cpp  spawner.cpp  tileSweep.cpp  timer.cpp
src/input/: input_manager.cpp
src/render/: renderer.cpp  sprite.cpp
src/resources/: asset_manager.cpp
src/systems/: animation_system.cpp  background_system.cpp  camera_system.cpp  cloud_system.cpp  collision_system.cpp  debug_draw_system.cpp  enemy_system.cpp  gameplay_systems.cpp  inspector_system.cpp  level_system.cpp  physics_system.cpp  physics_systems.cpp  player_controller_system.cpp  player_input_system.cpp  player_movement_system.cpp  render_systems.cpp  sprite_render_system.cpp
src/ui/: hud.cpp
src/util/: Quadtree.cpp  TileSweep.cpp  quadtree.cpp  spawner.cpp  tileSweep.cpp  timer.cpp
src/world/: JsonHelper.cpp  camera.cpp  level.cpp  tile_map.cpp
(+24 files in other folders)
